--- a/trunk/Enterprise/application.properties
+++ b/trunk/Enterprise/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Fri Mar 23 11:14:47 CET 2012
-app.grails.version=2.0.1
+#Fri Apr 20 01:04:57 CEST 2012
+app.grails.version=2.0.3
 app.name=Enterprise
 app.servlet.version=2.5
 app.version=0.1
