--- a/trunk/Enterprise/application.properties
+++ b/trunk/Enterprise/application.properties
@@ -1,7 +1,7 @@
 #Grails Metadata file
-#Mon Apr 30 18:57:17 CEST 2012
-app.grails.version=2.0.3
-app.name=Enterprise
+#Mon May 21 15:19:36 CEST 2012
+app.grails.version=2.0.1
+app.name=GiovanileCanzese
 app.servlet.version=2.5
 app.version=0.1
 plugins.cxf=0.9.0
